...
      }
    },
    "Accept": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Attach": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Camera": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Cancel": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Chat": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Connected": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Connecting...": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Contacts": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Disconnect": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Done": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Files": {
      "extractionState": "manual",
      "localizations": {
...
      "isCommentAutoGenerated": true
    },
    "Library": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Manual Connect": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Message": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Name": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Nearby": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "No active connection": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "No saved devices": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "PeerDrop": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Photos": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Quick Connect": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Requesting connection...": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Send": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Send File": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Settings": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Switch to grid": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Switch to list": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Transfer History": {
      "extractionState": "manual",
      "localizations": {
...
      }
    },
    "Voice Call": {
      "extractionState": "manual",
      "localizations": {
...
